swagger personal info
