# app/Http/Controllers/API/Profile/UserCertificationController.php
@@ -22,7 +22,14 @@ use App\Http\Resources\UserCertification\CurrentUserCertificationResource;
 use App\Http\Resources\UserCertification\UserCertificationResource;
 use Illuminate\Http\JsonResponse;
 use Joselfonseca\LaravelTactician\CommandBusInterface;
+use OpenApi\Annotations as OA;
 
+/**
+ * @OA\Tag(
+ *     name="User Certification",
+ *     description="User Certification Information and Action",
+ * )
+ */
 class UserCertificationController extends Controller
 {
     /**
@@ -35,6 +42,41 @@ class UserCertificationController extends Controller
     }
 
     /**
+     * @OA\Get(
+     *     path="/profile/user-certification/list-certification-current-user",
+     *     summary="Get List Certification Current User",
+     *     tags={"UserCertification"},
+     *     security={{"bearAuth": {}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Get user info successfully",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="message", type="string", example="Get user info successfully"
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated - Token is invalid or missing",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(property="message", type="string", example="Unauthenticated.")
+     *          )
+     *     ),
+     *     @OA\Response(
+     *          response=500,
+     *          description="Get user info failed!",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="message", type="string", example="Get user info failed!"
+     *              )
+     *          )
+     *      )
+     * )
+     *
      * @return JsonResponse
      */
     public function getListCertificationCurrentUser(): JsonResponse
@@ -53,6 +95,129 @@ class UserCertificationController extends Controller
     }
 
     /**
+     * @OA\Post(
+     *     path="/profile/user-certification/",
+     *     summary="Store User Certification",
+     *     description="Store User Certification",
+     *     tags={"UserCertification"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 required={"name", "is_no_expiration", "start_date"},
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string",
+     *                     example="Ielts 8.0",
+     *                     description="Nhập tên chứng chỉ"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="organization",
+     *                     type="string",
+     *                     example="Hội đồng Anh và Em",
+     *                     description="Tên tổ chức"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="is_no_expiration",
+     *                     type="boolean",
+     *                     example=true,
+     *                     description="Không có ngày hết hạn (0:false, 1:true), mặc định là 1"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="start_date",
+     *                     type="string",
+     *                     format="date",
+     *                     example="2025-01-01",
+     *                     description="Ngày nhận chứng chỉ"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="end_date",
+     *                     type="string",
+     *                     format="date",
+     *                     example="2025-1-2",
+     *                     description="Ngày hết hạn chứng chỉ nếu chứng chỉ không vĩnh viễn",
+     *                 ),
+     *                 @OA\Property(
+     *                      property="attachments",
+     *                      type="array",
+     *                      description="Mảng chứa file",
+     *                      @OA\Items(
+     *                          type="object",
+     *                          required={"content_type_id"},
+     *                          @OA\Property(
+     *                              property="title",
+     *                              type="string",
+     *                              example="File chứng chỉ",
+     *                              description="Tiêu đề file đính kèm"
+     *                          ),
+     *                          @OA\Property(
+     *                              property="description",
+     *                              type="string",
+     *                              example="File scan chứng chỉ IELTS",
+     *                              description="Mô tả file đính kèm"
+     *                          ),
+     *                         @OA\Property(
+     *                               property="content_type_id",
+     *                               type="integer",
+     *                               example="1",
+     *                               description="ID loại nội dung của file (tham chiếu tới bảng default_content_types), Loại nội dung: 1 (image), 2 (file), 3 (url), 4 (video)"
+     *                         ),
+     *                         @OA\Property(
+     *                                property="url",
+     *                                type="string",
+     *                                example="http://localhost:8040/api/documentation",
+     *                                description="ID loại nội dung của file (tham chiếu tới bảng default_content_types), Loại nội dung: 1 (image), 2 (file), 3 (url), 4 (video)"
+     *                          ),
+     *                          @OA\Property(
+     *                                property="image",
+     *                                type="string",
+     *                                format="binary",
+     *                                description="The file to upload"
+     *                          ),
+     *                          @OA\Property(
+     *                                 property="video",
+     *                                 type="string",
+     *                                 format="binary",
+     *                                 description="The file to upload"
+     *                          ),
+     *                      )
+     *                 ),
+     *             )
+     *         )
+     *     ),
+     *      @OA\Response(
+     *           response="200",
+     *           description="Store User Certification Successfully",
+     *           @OA\JsonContent(
+     *               type="object",
+     *               @OA\Property(
+     *                   property="message", type="string", example="Saved"
+     *               )
+     *           )
+     *     ),
+     *      @OA\Response(
+     *              response=401,
+     *              description="Unauthenticated - Token is invalid or missing",
+     *              @OA\JsonContent(
+     *                  type="object",
+     *                  @OA\Property(property="message", type="string", example="Unauthenticated.")
+     *              )
+     *       ),
+     *      @OA\Response(
+     *            response="500",
+     *            description="Store User Certification Fail",
+     *            @OA\JsonContent(
+     *                type="object",
+     *                @OA\Property(
+     *                    property="message", type="string", example="Fail"
+     *                )
+     *            )
+     *      ),
+     * )
+     *
      * @param UserCertificationRequest $request
      * @return JsonResponse
      */
@@ -69,6 +234,8 @@ class UserCertificationController extends Controller
     }
 
     /**
+     *
+     *
      * @return JsonResponse
      */
     public function getCompleteListOfUserCertification(): JsonResponse
